fix: move overflow hidden to child elements

--- a/resources/scss/ceres/common/_common.scss
+++ b/resources/scss/ceres/common/_common.scss
@@ -1,6 +1,7 @@
-.app {
+header#page-header,
+div#page-body,
+div.footer {
     overflow-x: hidden;
-    height: 100vh;
 }
 
 .center-xy {
